Added forward return function

--- a/Data_science_project_v1.ipynb
+++ b/Data_science_project_v1.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "[5 rows x 76 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,42 +391,251 @@
     "        elif (type(dfpl.loc[dfpl.index[a], dfpl.columns[b]])==np.float64) & (a>=1):\n",
     "            dfpl.loc[dfpl.index[a], dfpl.columns[b]] = dfpl.loc[dfpl.index[a-1], dfpl.columns[b]]*(1+(dfpl.loc[dfpl.index[a], dfpl.columns[b]]))\n",
     "\n",
-    "dfpl.to_csv('//Users//Jamie//Downloads//stock_pricelevel.csv')\n",
+    "dfpl.to_csv('//Users//Jamie//Documents//Jupyter Notebook Files//stock_pricelevel.csv')\n",
     "dfpl.head(5)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "testing v2\n"
-     ]
-    }
-   ],
    "source": [
-    "print ('testing v2')"
+    "Creating the x month return dataframe function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def x_monthforwardreturn(x, dfinput):\n",
+    "    dfinput_x = dfinput.shift(int(x))\n",
+    "    dfret_x = dfinput_x/dfinput - 1\n",
+    "    return dfret_x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Applying function to the dataframe (3 month forward return below)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ansel test\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BCI</th>\n",
+       "      <th>ION</th>\n",
+       "      <th>ICT</th>\n",
+       "      <th>URC</th>\n",
+       "      <th>UBP</th>\n",
+       "      <th>SMCB</th>\n",
+       "      <th>ABS</th>\n",
+       "      <th>FLI</th>\n",
+       "      <th>RLC</th>\n",
+       "      <th>EEI</th>\n",
+       "      <th>...</th>\n",
+       "      <th>RCB</th>\n",
+       "      <th>VLL</th>\n",
+       "      <th>GMA7</th>\n",
+       "      <th>PSE</th>\n",
+       "      <th>CHIB</th>\n",
+       "      <th>CEB</th>\n",
+       "      <th>SMDC</th>\n",
+       "      <th>BLOOM</th>\n",
+       "      <th>LTG</th>\n",
+       "      <th>EMP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>36922</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36950</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36981</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37011</th>\n",
+       "      <td>-0.039215</td>\n",
+       "      <td>0.319149</td>\n",
+       "      <td>0.280702</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.207548</td>\n",
+       "      <td>0.283176</td>\n",
+       "      <td>0.311475</td>\n",
+       "      <td>0.436169</td>\n",
+       "      <td>0.1340</td>\n",
+       "      <td>0.499998</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.231199</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.499991e-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.058824</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.202806</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37042</th>\n",
+       "      <td>0.040000</td>\n",
+       "      <td>0.130436</td>\n",
+       "      <td>-0.423423</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>0.033387</td>\n",
+       "      <td>0.138132</td>\n",
+       "      <td>0.229506</td>\n",
+       "      <td>0.322115</td>\n",
+       "      <td>0.1664</td>\n",
+       "      <td>0.299998</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.274118</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-9.512956e-08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.083334</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.230769</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 76 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            BCI       ION       ICT       URC       UBP      SMCB       ABS  \\\n",
+       "36922       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+       "36950       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+       "36981       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+       "37011 -0.039215  0.319149  0.280702  0.333333  0.207548  0.283176  0.311475   \n",
+       "37042  0.040000  0.130436 -0.423423  0.222222  0.033387  0.138132  0.229506   \n",
+       "\n",
+       "            FLI     RLC       EEI ...        RCB  VLL  GMA7  PSE  \\\n",
+       "36922       NaN     NaN       NaN ...        NaN  NaN   NaN  NaN   \n",
+       "36950       NaN     NaN       NaN ...        NaN  NaN   NaN  NaN   \n",
+       "36981       NaN     NaN       NaN ...        NaN  NaN   NaN  NaN   \n",
+       "37011  0.436169  0.1340  0.499998 ...   0.231199  NaN   NaN  NaN   \n",
+       "37042  0.322115  0.1664  0.299998 ...   0.274118  NaN   NaN  NaN   \n",
+       "\n",
+       "               CHIB  CEB      SMDC  BLOOM       LTG  EMP  \n",
+       "36922           NaN  NaN       NaN    NaN       NaN  NaN  \n",
+       "36950           NaN  NaN       NaN    NaN       NaN  NaN  \n",
+       "36981           NaN  NaN       NaN    NaN       NaN  NaN  \n",
+       "37011  2.499991e-01  NaN  0.058824    NaN -0.202806  NaN  \n",
+       "37042 -9.512956e-08  NaN  0.083334    NaN -0.230769  NaN  \n",
+       "\n",
+       "[5 rows x 76 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print ('ansel test')"
+    "dfret_3m = x_monthforwardreturn(3)\n",
+    "dfret_3m.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Subtracting the columns to the price return of PCOMP"
    ]
   }
  ],
