done until creating (score, outperf)

--- a/Data_science_project_v1.ipynb
+++ b/Data_science_project_v1.ipynb
@@ -791,9 +791,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(192, 76)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -815,27 +822,27 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ABS</th>\n",
-       "      <th>ABSP</th>\n",
-       "      <th>AC</th>\n",
-       "      <th>AEV</th>\n",
-       "      <th>AGI</th>\n",
-       "      <th>ALC</th>\n",
-       "      <th>ALI</th>\n",
-       "      <th>AP</th>\n",
        "      <th>BCI</th>\n",
-       "      <th>BDO</th>\n",
-       "      <th>...</th>\n",
-       "      <th>SGI</th>\n",
-       "      <th>SM</th>\n",
-       "      <th>SMC</th>\n",
-       "      <th>SMCB</th>\n",
-       "      <th>SMDC</th>\n",
-       "      <th>SMPH</th>\n",
-       "      <th>TEL</th>\n",
-       "      <th>UBP</th>\n",
+       "      <th>ION</th>\n",
+       "      <th>ICT</th>\n",
        "      <th>URC</th>\n",
+       "      <th>UBP</th>\n",
+       "      <th>SMCB</th>\n",
+       "      <th>ABS</th>\n",
+       "      <th>FLI</th>\n",
+       "      <th>RLC</th>\n",
+       "      <th>EEI</th>\n",
+       "      <th>...</th>\n",
+       "      <th>RCB</th>\n",
        "      <th>VLL</th>\n",
+       "      <th>GMA7</th>\n",
+       "      <th>PSE</th>\n",
+       "      <th>CHIB</th>\n",
+       "      <th>CEB</th>\n",
+       "      <th>SMDC</th>\n",
+       "      <th>BLOOM</th>\n",
+       "      <th>LTG</th>\n",
+       "      <th>EMP</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -888,30 +895,6 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36980</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>36981</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -937,190 +920,109 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37011</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-0.259443</td>\n",
+       "      <td>0.098921</td>\n",
+       "      <td>0.060474</td>\n",
+       "      <td>0.113105</td>\n",
+       "      <td>-0.012680</td>\n",
+       "      <td>0.062948</td>\n",
+       "      <td>0.091246</td>\n",
+       "      <td>0.215941</td>\n",
+       "      <td>-0.086228</td>\n",
+       "      <td>0.279770</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.010971</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>0.029771</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>-0.161404</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-0.423034</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37042</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-0.106080</td>\n",
+       "      <td>-0.015644</td>\n",
+       "      <td>-0.569503</td>\n",
+       "      <td>0.076142</td>\n",
+       "      <td>-0.112693</td>\n",
+       "      <td>-0.007948</td>\n",
+       "      <td>0.083426</td>\n",
+       "      <td>0.176035</td>\n",
+       "      <td>0.020320</td>\n",
+       "      <td>0.153918</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.128038</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>-0.146080</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>-0.062746</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37071</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37072</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37103</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37134</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-0.376849</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 77 columns</p>\n",
+       "<p>5 rows × 76 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       ABS  ABSP  AC  AEV  AGI  ALC  ALI  AP  BCI  BDO ...   SGI  SM  SMC  \\\n",
-       "36922  NaN   NaN NaN  NaN  NaN  NaN  NaN NaN  NaN  NaN ...   NaN NaN  NaN   \n",
-       "36950  NaN   NaN NaN  NaN  NaN  NaN  NaN NaN  NaN  NaN ...   NaN NaN  NaN   \n",
-       "36980  NaN   NaN NaN  NaN  NaN  NaN  NaN NaN  NaN  NaN ...   NaN NaN  NaN   \n",
-       "36981  NaN   NaN NaN  NaN  NaN  NaN  NaN NaN  NaN  NaN ...   NaN NaN  NaN   \n",
-       "37011  NaN   NaN NaN  NaN  NaN  NaN  NaN NaN  NaN  NaN ...   NaN NaN  NaN   \n",
-       "37042  NaN   NaN NaN  NaN  NaN  NaN  NaN NaN  NaN  NaN ...   NaN NaN  NaN   \n",
-       "37071  NaN   NaN NaN  NaN  NaN  NaN  NaN NaN  NaN  NaN ...   NaN NaN  NaN   \n",
-       "37072  NaN   NaN NaN  NaN  NaN  NaN  NaN NaN  NaN  NaN ...   NaN NaN  NaN   \n",
-       "37103  NaN   NaN NaN  NaN  NaN  NaN  NaN NaN  NaN  NaN ...   NaN NaN  NaN   \n",
-       "37134  NaN   NaN NaN  NaN  NaN  NaN  NaN NaN  NaN  NaN ...   NaN NaN  NaN   \n",
+       "            BCI       ION       ICT       URC       UBP      SMCB       ABS  \\\n",
+       "36922       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+       "36950       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+       "36981       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+       "37011 -0.259443  0.098921  0.060474  0.113105 -0.012680  0.062948  0.091246   \n",
+       "37042 -0.106080 -0.015644 -0.569503  0.076142 -0.112693 -0.007948  0.083426   \n",
        "\n",
-       "       SMCB  SMDC  SMPH  TEL  UBP  URC  VLL  \n",
-       "36922   NaN   NaN   NaN  NaN  NaN  NaN  NaN  \n",
-       "36950   NaN   NaN   NaN  NaN  NaN  NaN  NaN  \n",
-       "36980   NaN   NaN   NaN  NaN  NaN  NaN  NaN  \n",
-       "36981   NaN   NaN   NaN  NaN  NaN  NaN  NaN  \n",
-       "37011   NaN   NaN   NaN  NaN  NaN  NaN  NaN  \n",
-       "37042   NaN   NaN   NaN  NaN  NaN  NaN  NaN  \n",
-       "37071   NaN   NaN   NaN  NaN  NaN  NaN  NaN  \n",
-       "37072   NaN   NaN   NaN  NaN  NaN  NaN  NaN  \n",
-       "37103   NaN   NaN   NaN  NaN  NaN  NaN  NaN  \n",
-       "37134   NaN   NaN   NaN  NaN  NaN  NaN  NaN  \n",
+       "            FLI       RLC       EEI ...        RCB  VLL  GMA7  PSE      CHIB  \\\n",
+       "36922       NaN       NaN       NaN ...        NaN  NaN   NaN  NaN       NaN   \n",
+       "36950       NaN       NaN       NaN ...        NaN  NaN   NaN  NaN       NaN   \n",
+       "36981       NaN       NaN       NaN ...        NaN  NaN   NaN  NaN       NaN   \n",
+       "37011  0.215941 -0.086228  0.279770 ...   0.010971  NaN   NaN  NaN  0.029771   \n",
+       "37042  0.176035  0.020320  0.153918 ...   0.128038  NaN   NaN  NaN -0.146080   \n",
        "\n",
-       "[10 rows x 77 columns]"
+       "       CEB      SMDC  BLOOM       LTG  EMP  \n",
+       "36922  NaN       NaN    NaN       NaN  NaN  \n",
+       "36950  NaN       NaN    NaN       NaN  NaN  \n",
+       "36981  NaN       NaN    NaN       NaN  NaN  \n",
+       "37011  NaN -0.161404    NaN -0.423034  NaN  \n",
+       "37042  NaN -0.062746    NaN -0.376849  NaN  \n",
+       "\n",
+       "[5 rows x 76 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfoutperf_3m = dfstockpl.subtract(dfpseiTR_3m)\n",
-    "dfoutperf_3m.head(10)"
+    "#rounding to 6 digits\n",
+    "dfstockplret_3m = round(dfstockplret_3m,6)\n",
+    "dfpseiTR_3m = round(dfpseiTR_3m,6)\n",
+    "\n",
+    "#converting dfpseiTR_3m into a series so that I can subtract it from the dataframe of stock 3m forward returns\n",
+    "tempSeries = [x for x in dfpseiTR_3m['PCOMP TR']]\n",
+    "tempSeries\n",
+    "\n",
+    "dfoutperf_3m = dfstockplret_3m.sub(tempSeries, axis=0)\n",
+    "print (dfoutperf_3m.shape)\n",
+    "dfoutperf_3m.head(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
