--- a/Data_science_project_v1.ipynb
+++ b/Data_science_project_v1.ipynb
@@ -1017,12 +1017,314 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BCI</th>\n",
+       "      <th>ION</th>\n",
+       "      <th>ICT</th>\n",
+       "      <th>URC</th>\n",
+       "      <th>UBP</th>\n",
+       "      <th>SMCB</th>\n",
+       "      <th>ABS</th>\n",
+       "      <th>FLI</th>\n",
+       "      <th>RLC</th>\n",
+       "      <th>EEI</th>\n",
+       "      <th>...</th>\n",
+       "      <th>RCB</th>\n",
+       "      <th>VLL</th>\n",
+       "      <th>GMA7</th>\n",
+       "      <th>PSE</th>\n",
+       "      <th>CHIB</th>\n",
+       "      <th>CEB</th>\n",
+       "      <th>SMDC</th>\n",
+       "      <th>BLOOM</th>\n",
+       "      <th>LTG</th>\n",
+       "      <th>EMP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>36922</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.062443</td>\n",
+       "      <td>-0.053796</td>\n",
+       "      <td>0.307173</td>\n",
+       "      <td>0.196642</td>\n",
+       "      <td>0.516090</td>\n",
+       "      <td>-0.406294</td>\n",
+       "      <td>-0.482474</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.307173</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.516090</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36950</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.035469</td>\n",
+       "      <td>-0.050858</td>\n",
+       "      <td>0.196175</td>\n",
+       "      <td>0.275168</td>\n",
+       "      <td>-0.364142</td>\n",
+       "      <td>-0.229654</td>\n",
+       "      <td>-0.417662</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.196175</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.364142</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36981</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.258605</td>\n",
+       "      <td>0.328888</td>\n",
+       "      <td>-0.095036</td>\n",
+       "      <td>-0.132697</td>\n",
+       "      <td>0.055743</td>\n",
+       "      <td>0.147378</td>\n",
+       "      <td>0.116802</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.095036</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.055743</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37011</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.382619</td>\n",
+       "      <td>0.074050</td>\n",
+       "      <td>-0.842184</td>\n",
+       "      <td>-0.392563</td>\n",
+       "      <td>0.369888</td>\n",
+       "      <td>0.301919</td>\n",
+       "      <td>0.543440</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.842184</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.369888</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37042</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.540034</td>\n",
+       "      <td>0.028212</td>\n",
+       "      <td>0.086328</td>\n",
+       "      <td>0.624103</td>\n",
+       "      <td>0.287636</td>\n",
+       "      <td>0.212853</td>\n",
+       "      <td>-0.094265</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.086328</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.287636</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 76 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       BCI       ION       ICT       URC       UBP      SMCB       ABS  \\\n",
+       "36922  NaN -0.062443 -0.053796  0.307173  0.196642  0.516090 -0.406294   \n",
+       "36950  NaN -0.035469 -0.050858  0.196175  0.275168 -0.364142 -0.229654   \n",
+       "36981  NaN  0.258605  0.328888 -0.095036 -0.132697  0.055743  0.147378   \n",
+       "37011  NaN  0.382619  0.074050 -0.842184 -0.392563  0.369888  0.301919   \n",
+       "37042  NaN -0.540034  0.028212  0.086328  0.624103  0.287636  0.212853   \n",
+       "\n",
+       "            FLI  RLC  EEI ...   RCB       VLL  GMA7  PSE  CHIB  CEB      SMDC  \\\n",
+       "36922 -0.482474  NaN  NaN ...   NaN  0.307173   NaN  NaN   NaN  NaN  0.516090   \n",
+       "36950 -0.417662  NaN  NaN ...   NaN  0.196175   NaN  NaN   NaN  NaN -0.364142   \n",
+       "36981  0.116802  NaN  NaN ...   NaN -0.095036   NaN  NaN   NaN  NaN  0.055743   \n",
+       "37011  0.543440  NaN  NaN ...   NaN -0.842184   NaN  NaN   NaN  NaN  0.369888   \n",
+       "37042 -0.094265  NaN  NaN ...   NaN  0.086328   NaN  NaN   NaN  NaN  0.287636   \n",
+       "\n",
+       "       BLOOM  LTG  EMP  \n",
+       "36922    NaN  NaN  NaN  \n",
+       "36950    NaN  NaN  NaN  \n",
+       "36981    NaN  NaN  NaN  \n",
+       "37011    NaN  NaN  NaN  \n",
+       "37042    NaN  NaN  NaN  \n",
+       "\n",
+       "[5 rows x 76 columns]"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfqs.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Stock</th>\n",
+       "      <th>Quant Score</th>\n",
+       "      <th>Performance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Date Stock Quant Score Performance\n",
+       "0    1     2           3           4\n",
+       "1    1     2           3           4\n",
+       "2    1     2           3           4\n",
+       "3    1     2           3           4\n",
+       "4    1     2           3           4"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfqs_perf = pd.DataFrame(columns=['Date', 'Stock','Quant Score', 'Performance'])\n",
+    "\n",
+    "x, y = dfqs.shape\n",
+    "for a in range(0,x):\n",
+    "    for b in range(0,y):\n",
+    "        w = 1\n",
+    "        x = 2\n",
+    "        y = 3\n",
+    "        z = 4\n",
+    "        dftemp = pd.DataFrame([[w, x, y, z]], columns=['Date', 'Stock','Quant Score', 'Performance'])\n",
+    "        dfqs_perf = dfqs_perf.append(dftemp, ignore_index=True)\n",
+    "\n",
+    "dfqs_perf.head(5)"
+   ]
   }
  ],
  "metadata": {
