cleaning the data further

--- a/Data_science_project_v1.ipynb
+++ b/Data_science_project_v1.ipynb
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -1259,53 +1259,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
+       "      <td>36922</td>\n",
+       "      <td>BCI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
+       "      <td>36922</td>\n",
+       "      <td>ION</td>\n",
+       "      <td>-0.062443</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
+       "      <td>36922</td>\n",
+       "      <td>ICT</td>\n",
+       "      <td>-0.053796</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
+       "      <td>36922</td>\n",
+       "      <td>URC</td>\n",
+       "      <td>0.307173</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
+       "      <td>36922</td>\n",
+       "      <td>UBP</td>\n",
+       "      <td>0.196642</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Date Stock Quant Score Performance\n",
-       "0    1     2           3           4\n",
-       "1    1     2           3           4\n",
-       "2    1     2           3           4\n",
-       "3    1     2           3           4\n",
-       "4    1     2           3           4"
+       "    Date Stock  Quant Score  Performance\n",
+       "0  36922   BCI          NaN          NaN\n",
+       "1  36922   ION    -0.062443          NaN\n",
+       "2  36922   ICT    -0.053796          NaN\n",
+       "3  36922   URC     0.307173          NaN\n",
+       "4  36922   UBP     0.196642          NaN"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,16 +1314,121 @@
     "dfqs_perf = pd.DataFrame(columns=['Date', 'Stock','Quant Score', 'Performance'])\n",
     "\n",
     "x, y = dfqs.shape\n",
-    "for a in range(0,x):\n",
-    "    for b in range(0,y):\n",
-    "        w = 1\n",
-    "        x = 2\n",
-    "        y = 3\n",
-    "        z = 4\n",
+    "for a in range(0,192):\n",
+    "    for b in range(0,76):\n",
+    "        w = dfqs.index[int(a)]\n",
+    "        x = dfqs.columns[int(b)]\n",
+    "        y = dfqs.loc[dfqs.index[int(a)], dfqs.columns[int(b)]]\n",
+    "        z = dfoutperf_3m.loc[dfqs.index[int(a)], dfqs.columns[int(b)]]\n",
     "        dftemp = pd.DataFrame([[w, x, y, z]], columns=['Date', 'Stock','Quant Score', 'Performance'])\n",
     "        dfqs_perf = dfqs_perf.append(dftemp, ignore_index=True)\n",
     "\n",
     "dfqs_perf.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Stock</th>\n",
+       "      <th>Quant Score</th>\n",
+       "      <th>Performance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>229</th>\n",
+       "      <td>37011</td>\n",
+       "      <td>ION</td>\n",
+       "      <td>0.382619</td>\n",
+       "      <td>0.098921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>230</th>\n",
+       "      <td>37011</td>\n",
+       "      <td>ICT</td>\n",
+       "      <td>0.074050</td>\n",
+       "      <td>0.060474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>231</th>\n",
+       "      <td>37011</td>\n",
+       "      <td>URC</td>\n",
+       "      <td>-0.842184</td>\n",
+       "      <td>0.113105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>232</th>\n",
+       "      <td>37011</td>\n",
+       "      <td>UBP</td>\n",
+       "      <td>-0.392563</td>\n",
+       "      <td>-0.012680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>233</th>\n",
+       "      <td>37011</td>\n",
+       "      <td>SMCB</td>\n",
+       "      <td>0.369888</td>\n",
+       "      <td>0.062948</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Date Stock  Quant Score  Performance\n",
+       "229  37011   ION     0.382619     0.098921\n",
+       "230  37011   ICT     0.074050     0.060474\n",
+       "231  37011   URC    -0.842184     0.113105\n",
+       "232  37011   UBP    -0.392563    -0.012680\n",
+       "233  37011  SMCB     0.369888     0.062948"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#delete all rows with NaN\n",
+    "dfqs_perf_no_nan = dfqs_perf.dropna(axis=0,how='any')\n",
+    "dfqs_perf_no_nan.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#export to csv\n",
+    "\n",
+    "dfqs_perf_no_nan.to_csv('//Users//Jamie//Documents//Jupyter Notebook Files//dfqs_perf_no_nan.csv')"
    ]
   }
  ],
