--- a/Data_science_project_v1.ipynb
+++ b/Data_science_project_v1.ipynb
@@ -51,7 +51,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dfqs = pd.read_csv('//Users//Jamie//Documents//Jupyter Notebook Files//quant_scores.csv', index_col = 0, parse_dates=True)\n",
@@ -72,7 +74,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def convert_to_pricelevel(dfinput):\n",
@@ -394,7 +398,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def x_monthforwardreturn(x, dfinput):\n",
@@ -1429,6 +1435,211 @@
     "#export to csv\n",
     "\n",
     "dfqs_perf_no_nan.to_csv('//Users//Jamie//Documents//Jupyter Notebook Files//dfqs_perf_no_nan.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating the scatter plot and linear regression fit on Quant scores vs 3 month performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Stock</th>\n",
+       "      <th>Quant Score</th>\n",
+       "      <th>Performance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>230</td>\n",
+       "      <td>37011</td>\n",
+       "      <td>ICT</td>\n",
+       "      <td>0.074050</td>\n",
+       "      <td>0.060474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>231</td>\n",
+       "      <td>37011</td>\n",
+       "      <td>URC</td>\n",
+       "      <td>-0.842184</td>\n",
+       "      <td>0.113105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>232</td>\n",
+       "      <td>37011</td>\n",
+       "      <td>UBP</td>\n",
+       "      <td>-0.392563</td>\n",
+       "      <td>-0.012680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>233</td>\n",
+       "      <td>37011</td>\n",
+       "      <td>SMCB</td>\n",
+       "      <td>0.369888</td>\n",
+       "      <td>0.062948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>234</td>\n",
+       "      <td>37011</td>\n",
+       "      <td>ABS</td>\n",
+       "      <td>0.301919</td>\n",
+       "      <td>0.091246</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0   Date Stock  Quant Score  Performance\n",
+       "1         230  37011   ICT     0.074050     0.060474\n",
+       "2         231  37011   URC    -0.842184     0.113105\n",
+       "3         232  37011   UBP    -0.392563    -0.012680\n",
+       "4         233  37011  SMCB     0.369888     0.062948\n",
+       "5         234  37011   ABS     0.301919     0.091246"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfqs_perf_no_nan = pd.read_csv('//Users//Jamie//Documents//Jupyter Notebook Files//dfqs_perf_no_nan.csv')\n",
+    "dftest = dfqs_perf_no_nan.loc[1:200]\n",
+    "dftest.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Stock</th>\n",
+       "      <th>Quant Score</th>\n",
+       "      <th>Performance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>230</td>\n",
+       "      <td>37011</td>\n",
+       "      <td>ICT</td>\n",
+       "      <td>0.074050</td>\n",
+       "      <td>0.060474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>231</td>\n",
+       "      <td>37011</td>\n",
+       "      <td>URC</td>\n",
+       "      <td>-0.842184</td>\n",
+       "      <td>0.113105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>232</td>\n",
+       "      <td>37011</td>\n",
+       "      <td>UBP</td>\n",
+       "      <td>-0.392563</td>\n",
+       "      <td>-0.012680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>233</td>\n",
+       "      <td>37011</td>\n",
+       "      <td>SMCB</td>\n",
+       "      <td>0.369888</td>\n",
+       "      <td>0.062948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>234</td>\n",
+       "      <td>37011</td>\n",
+       "      <td>ABS</td>\n",
+       "      <td>0.301919</td>\n",
+       "      <td>0.091246</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0   Date Stock  Quant Score  Performance\n",
+       "1         230  37011   ICT     0.074050     0.060474\n",
+       "2         231  37011   URC    -0.842184     0.113105\n",
+       "3         232  37011   UBP    -0.392563    -0.012680\n",
+       "4         233  37011  SMCB     0.369888     0.062948\n",
+       "5         234  37011   ABS     0.301919     0.091246"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fig = plt.figure()\n",
+    "#ax1 = fig.addsubplot(111)\n",
+    "#ax1.scatter(dftest['Quant Score'], dftest['Performance'], s=0)\n",
+    "\n",
+    "#plt.show()"
    ]
   }
  ],
